sql/src/test/BugTracker/Tests/drop_schema_crash.SF-1504794.stable.err
stderr of test 'drop_schema_crash.SF-1504794` in directory 'src/test/BugTracker` itself:


# 11:12:03 >  
# 11:12:03 >  Mtimeout -timeout 300 Mserver "--config=/ufs/niels/scratch/rc/Linux-x86_64/etc/MonetDB.conf" --debug=10 --set "monet_mod_path=/ufs/niels/scratch/rc/Linux-x86_64/lib/MonetDB:/ufs/niels/scratch/rc/Linux-x86_64/lib/bin" --set "gdk_dbfarm=/ufs/niels/scratch/rc/Linux-x86_64/var/MonetDB/dbfarm" --set "sql_logdir=/ufs/niels/scratch/rc/Linux-x86_64/var/MonetDB/log" --set mapi_port=35369 --set monet_prompt= --trace "--dbname=mTests_src_test_BugTracker" --dbinit="module(sql_server); sql_server_start();" ; echo ; echo Over..
# 11:12:03 >  


# 11:12:03 >  
# 11:12:03 >  Mtimeout -timeout 180 ./drop_schema_crash.SF-1504794.SQL drop_schema_crash.SF-1504794 
# 11:12:03 >  


# 11:12:03 >  
# 11:12:03 >  Mtimeout -timeout 60 java -jar /net/koala.ins.cwi.nl/export/scratch0/niels/rc/Linux-x86_64/build-sql/src/jdbc/jdbcclient-1.4.jar -h localhost -p 35369 -d mTests_src_test_BugTracker -f ../../../../../../../..//scratch1/niels/rc/sql/src/test/BugTracker/Tests/drop_schema_crash.SF-1504794-data.sql
# 11:12:03 >  

Error on line 5: DROP SCHEMA: unable to drop schema 'dbtapestry' (there are database objects which depend on it

# 11:12:03 >  
# 11:12:03 >  Done.
# 11:12:03 >  

